# carla_converter

./: .gitignore  .gitlab-ci.yml  .repos  CMakeLists.txt  README.md  README_8md.html  annotated.html  annotated_dup.js  carla__converter_8cpp.html  carla__converter_8cpp.js  carla__converter_8cpp_source.html  carla__converter_8hpp.html  carla__converter_8hpp.js  carla__converter_8hpp_source.html  classcarla__converter_1_1CarlaConverter-members.html  classcarla__converter_1_1CarlaConverter.html  classcarla__converter_1_1CarlaConverter.js  classes.html  dir_1b7f3f1c71013dc669cfce57136c40be.html  dir_1b7f3f1c71013dc669cfce57136c40be.js  dir_4632013541a3f1b871a112bbfe8d0fa2.html  dir_4632013541a3f1b871a112bbfe8d0fa2.js  dir_52353990cd2afc2632e63171170db020.html  dir_52353990cd2afc2632e63171170db020.js  dir_658045c730685a16fe53584b631b2acf.html  dir_658045c730685a16fe53584b631b2acf.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  menudata.js  (+12 more)
.github/workflows/: consistency.yml  docker-ros.yml
carla_converter/: CMakeLists.txt  README.md  package.xml
carla_converter/include/carla_converter/: carla_converter.hpp
carla_converter/launch/: carla_converter.launch.py  transforms.launch.py
carla_converter/src/: carla_converter.cpp
config/: carla_its_converter_params.yaml  carla_its_interface_params.yaml  params.yml
docker/: .gitlab-ci-ros1.yml  .gitlab-ci-ros2.yml  docker-compose-ros1.yml  docker-compose.yaml  docker-compose.yml
docker/compose/: docker-compose.yml
include/: CarlaItsConverterNode.h  CarlaItsInterfaceNode.h
include/carla_converter/: carla_converter.hpp
include/carla_its_converter/: carla_its_converter.hpp
install/: local_setup.sh  setup.sh
install/carla_its_converter/share/carla_its_converter/: package.bash  package.zsh
launch/: carla_converter.launch.py  carla_its_converter.launch  carla_its_converter.launch.py  carla_its_converter_launch.py  carla_its_converter_ros1.launch  carla_its_converter_ros2.launch  carla_its_converter_ros2.launch.xml  carla_its_interface_ros1.launch  carla_its_interface_ros2.launch  params_CarlaItsInterfaceNode.yaml  start_CarlaItsInterfaceNode.launch  start_CarlaItsInterfaceNode_ROS2.launch  transforms.launch.py
log/: latest_build
search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+4 more)
src/: CarlaItsConverterNode.cpp  CarlaItsInterfaceNode.cpp  carla_converter.cpp  carla_its_converter.cpp
