<?xml version="1.0"?>
<package format="3">
  <name>carla_its_converter</name>
  <version>1.0.0</version>
  <description>This package contains the CarlaConverterNode that acts as an Converter to the FB-FI definitions.</description>

  <maintainer email="guido.kueppers@ika.rwth-aachen.de">Guido Küppers</maintainer>

  <license>TODO</license>

  <author email="guido.kueppers@ika.rwth-aachen.de">Guido Küppers</author>
  <author email="jean-pierre.busch@ika.rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="lars.ippen@ika.rwth-aachen.de">Lars Ippen</author>

  <!-- Common -->
  <depend>derived_object_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>perception_msgs_utils</depend>
  <depend>std_msgs</depend>
  <depend>tf2_perception_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>shape_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>etsi_its_msgs</depend>
  <depend>etsi_its_msgs_utils</depend>

  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">tf2_geometry_msgs</depend>


  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslaunch</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
