<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>carla_converter</name>
  <version>1.3.0</version>
  <description>Converter for CARLA specific ROS 2 data to OpenADS interfaces.</description>

  <maintainer email="christian.geller@rwth-aachen.de">Christian Geller</maintainer>
  <author email="christian.geller@rwth-aachen.de">Christian Geller</author>
  <author email="silas.damaschke@rwth-aachen.de">Silas Damaschke</author>
  <author email="guido.linden@rwth-aachen.de">Guido Linden</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>carla_msgs</depend>
  <depend>derived_object_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>perception_msgs_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_perception_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
